WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133612
Regression
r168397
- Form layout is incorrect on OS X Yosemite
https://bugs.webkit.org/show_bug.cgi?id=133612
Summary
Regression r168397 - Form layout is incorrect on OS X Yosemite
Dean Jackson
Reported
2014-06-07 15:55:27 PDT
Regression
r168397
- Form layout is incorrect on OS X Yosemite
Attachments
Patch
(8.74 KB, patch)
2014-06-07 16:00 PDT
,
Dean Jackson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-06-07 16:00:58 PDT
Created
attachment 232671
[details]
Patch
Anders Carlsson
Comment 2
2014-06-07 16:21:23 PDT
Comment on
attachment 232671
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232671&action=review
> Source/WebCore/platform/graphics/mac/GraphicsContextMac.mm:71 > + return wkDrawFocusRingAtTime(context, DBL_MAX);
Please use std::numeric_limits<double>::max() here.
> Source/WebCore/platform/mac/ThemeMac.mm:379 > + wkDrawCellFocusRingWithFrameAtTime(cell, cellFrame, controlView, DBL_MAX);
Same thing here.
> Source/WebCore/rendering/RenderThemeMac.mm:928 > + if (wkDrawCellFocusRingWithFrameAtTime(popupButton, inflatedRect, view, DBL_MAX))
And here.
Dean Jackson
Comment 3
2014-06-07 16:26:21 PDT
Committed
r169681
: <
http://trac.webkit.org/changeset/169681
>
Alexey Proskuryakov
Comment 4
2014-06-09 09:53:57 PDT
This broke three tests on Mavericks and Mountain Lion at least (not sure about Yosemite): compositing/geometry/ancestor-overflow-change.html compositing/layer-creation/overlap-animation-container.html platform/mac-wk2/tiled-drawing/fixed/absolute-inside-fixed.html
Alexey Proskuryakov
Comment 5
2014-06-09 10:14:32 PDT
Fixing in
bug 133646
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug