Regression r168397 - Form layout is incorrect on OS X Yosemite https://bugs.webkit.org/show_bug.cgi?id=133612 <rdar://problem/16850492> <rdar://problem/17016914>

Reviewed by Anders Carlson.

Revision 168397 introduced a new animated style of form controls. Part of
it included extending the margins for the controls to take into account the
focus ring that animates in from a large radius to a small radius. This
caused two problems:

- the incorrect margins broke many layouts
- despite increased margins, there were still some areas
  that did not repaint correctly.

Restore the old margins and (temporarily) turn off focus ring animation.
Bad layout is much worse than a missing animation. Another benefit
of this is that we will use less memory.

* platform/graphics/mac/GraphicsContextMac.mm:
(WebCore::drawFocusRingToContextAtTime): Pass in a time far far far in the future to
get the static rendering.
* platform/mac/ThemeMac.mm:
(WebCore::checkboxMargins): Restore correct margins.
(WebCore::radioMargins): Ditto.
(WebCore::drawCellFocusRing): New method that calls WKSI with a future time.
(WebCore::paintToggleButton): Call the new wrapper.
(WebCore::buttonMargins): Restore correct margins.
(WebCore::paintButton): Call the new wrapper.
* rendering/RenderThemeMac.h:
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::paintMenuList): Use a future time.
(WebCore::RenderThemeMac::platformFocusRingMaxWidth): Deleted. Use old outline value.

Canonical link: https://commits.webkit.org/151595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169681 268f45cc-cd09-0410-ab3c-d52691b4dbfc